# dreamtable

./: .gitignore  LICENSE  MANIFEST.in  README.md  TODO  drawing.py  easings.py  main.py  requirements.txt  setup.cfg  setup.py
dreamtable/: app.py  components.py  constants.py  geom.py  junk.py  main.py  utils.py
dreamtable/hal/: __init__.py  base.py  debug.py  geom.py  pyray.py  pysdl2.py  types.py
dreamtable/processors/: __init__.py  background_grid_renderer.py  box_selection_controller.py  box_selection_renderer.py  button_renderer.py  camera_context_controller.py  camera_controller.py  canvas_export_controller.py  canvas_renderer.py  debug_entity_renderer.py  drag_controller.py  dropper_tool_controller.py  dropper_tool_renderer.py  egg_timer_controller.py  egg_tool_controller.py  final_delete_controller.py  grid_tool_controller.py  grid_tool_renderer.py  hover_controller.py  image_controller.py  image_delete_controller.py  motion_controller.py  mouse_controller.py  pencil_tool_controller.py  pencil_tool_renderer.py  position_marker_renderer.py  press_controller.py  selectable_delete_controller.py  sprite_region_renderer.py  tiny_friend_controller.py  tool_switcher_controller.py  wandering_controller.py
dreamtable/processors/controllers/: __init__.py  box_selection.py  camera.py  camera_context.py  canvas_delete.py  canvas_export.py  drag.py  dropper_tool.py  egg_timer.py  egg_tool.py  final_delete.py  grid_tool.py  hover.py  image.py  image_delete.py  motion.py  mouse.py  pencil_tool.py  press.py  selectable_delete.py  tiny_friend.py  tool_switcher.py  wandering.py
dreamtable/processors/renderers/: __init__.py  background_grid.py  box_selection.py  button.py  canvas.py  debug_entity.py  dropper_tool.py  grid_tool.py  pencil_tool.py  position_marker.py  sprite_region.py
