[metadata]
name = dreamtable
version = file: dreamtable/_version.txt
author = Jesse Dubay
author-email = jesse@thefortytwo.net
home-page = https://github.com/vreon/dream-table
description = An infinite canvas for retro game assets
long-description = file: README.md
long_description_content_type = text/markdown
license-file = COPYING
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls = 
    Bug Tracker = https://github.com/vreon/dream-table/issues

[options]
zip_safe = false
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
packages = dreamtable
test_suite = tests
setup_requires =
    setuptools
install_requires =
    esper==1.3
    raylib @ git+git://github.com/electronstudio/raylib-python-cffi.git#egg=raylib-dev

[options.entry_points]
console_scripts =
    dreamtable = dreamtable.main:main

[options.package_data]
dreamtable = py.typed, _version.txt, *.pyi

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar

[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true

[mypy-esper]
ignore_missing_imports = True

[mypy-raylib.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True
